test/part2/success/typage_simple1-2.c


int main(){
	
	int i;
	char c;

	c = i;
	i = c;
}
