test/part2/fail/bad_assign.c

struct b {
	int h;
};


int main () {

	int i;

	i = h;

}
